Stopped course filter button disappearing on mobile

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -58,3 +58,7 @@ h5{
 .progress-bar {
     background-color: #9BAE4D !important;
 }
+
+.block-myoverview .dropdown.m-b-1.mr-auto {
+    display: block;
+}
